[package]
name = "tp-lp-staking"
version = "0.1.0"
authors = ["Terra Poker Team"]
edition = "2021"
description = "A Goverance contract for Terra Poker - allows a user to create poll and do vote"
license = "Apache-2.0"
repository = "https://github.com/terra-poker/contracts.git"
homepage = "https://terra-poker.games"
documentation = "https://docs.terra-poker.games"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
terrapoker = { path = "../../packages/terra_poker" }
schemars = { version = "0.8.10" }
serde = { version = "1.0.139", default-features = false, features = ["derive"] }

[dev-dependencies]