[package]
name = "xtpt"
version = "0.1.0"
authors = ["Terra Poker Team"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/terra-poker/contracts.git"
homepage = "https://terra-poker.games"
documentation = "https://docs.terra-poker.games"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cw20-base = { version = "0.13.4", features = ["library"]}
cw-storage-plus = {version = "0.13.4", features = ['iterator']}
cosmwasm-std = { version = "1.0.0" }

serde = { version = "1.0.139", default-features = false, features = ["derive"] }
schemars = { version = "0.8.10" }
thiserror = { version = "1.0.31" }

terrapoker = { path = "../../packages/terra_poker" }

[dev-dependencies]